--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
     <div class="ig">
         <img src="../assets/pierrot.gif">
     </div>
-    <div class="content-header">
+    <div class="content-header" style="position: relative; left: 7%;">
         <div data-aos="fade-down-right" data-aos-duration="1000">
             <h3>Surpasse toi en relèvant nos défis...</h3>
         </div>
