--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -27,3 +27,10 @@
     <% end %>
 </div>
 <% end %>
+<style type="text/css">
+button.close span {
+    position: relative;
+    top: 2px;
+    right: 2px;
+}
+</style>
