--- a/app/views/searches/create.js.erb
+++ b/app/views/searches/create.js.erb
@@ -19,7 +19,7 @@ $(`div#yield`).slideUp('slow');
 			            <th scope="col">Etablissement scolaire</th>
 			        </tr>
 			    </thead>
-			    <tbody>
+			    <tbody class="table-info">
 			        <% searching.each do |mod| %>
 			        <tr>
 			        	<td>
