--- a/app/assets/stylesheets/bootstrap/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap/bootstrap.css
@@ -3062,6 +3062,7 @@ input[type="button"].btn-block {
   display: none;
   float: left;
   min-width: 10rem;
+  width: 100%;
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
