--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
             <div class="form">
                 <div class="userDiv">
                     <h3 style="font-family: 'Orbitron'; text-align: center; padding: 0% 5%;">Bienvenue dans <strong>learninGame</strong></h3>
-                    <div class="def">
+                    <div class="intro">
                         <p style="color: #fff; font-size: 1.2em;">Ici vous aurez l'occasion d'apprendre en vous amusant, (c'est un peu cliché mais on s'en fou). Cette inscription ne se fait qu'une seule fois et est un petit peu long mais pas de panique, c'est pour votre sécurité et pour vous garantir un maximum de fun. Sans plus tarder, je vous invite à poursuivre l'inscription.</p>
                     </div>
                     <div class="def">
