--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -1,51 +1,153 @@
-<div class="">
-    <% if @results.length != 0 %>
-    <h1><a href="#stats">Mes stats</a></h1> 
-    <% end %>
-    <% @results.each do |tst| %>
-    <center>
-        <% 
-			n = 1 
-			totalPoints = 0
-			tst.questions.each do |question|
-				totalPoints += question.points 
-			end
-		%>
-        <%= tst.title %>
-    </center>
-    <ul>
-        <% tst.questions.each do |question| %>
-        <strong>
-            <%= n %>)
-            <%= question.content %>(
-            <%= question.points %>pts)</strong>
-        <ul>
-            <% question.options.sort_by{ |i| i }.each do |option| %>
-            <li class="<%= option.status %>">
-                <% if option.status == "Right_answer" %>
-                <strong><%= option.content %></strong>
-                <i class="fas fa-check"></i>
-                <% elsif option.status == "Correct" %>
-                <strong><%= option.content %></strong>
-                <i class="far fa-hand-point-left"></i>
-                <% elsif option.status == "Wrong_answer" %>
-                <strong><%= option.content %></strong>
-                <i class="fas fa-times"></i>
-                <% else %>
-                <%= option.content %>
+<style type="text/css">
+.results,
+.results *{
+    font-family: 'Orbitron';
+    /* border: 2px solid blue; */
+}
+
+.results .tests-list,
+.results .test-show {
+    height: 25em;
+    overflow: auto;
+}
+.results .tests-list{
+    border-right: 1px solid;
+}
+.results .tests-list li {
+    text-align: center;
+    margin: 7% 0%;
+    padding: 5% 2% 3% 2%;
+
+    border-right: 1px solid;
+    border-bottom: 1px solid;
+
+    border-radius: 0px 0px 5px 0px;
+
+    cursor: pointer;
+    list-style: none;
+}
+.results .tests-list li:hover {
+    color: #0097e6;
+    border-radius: 5px;
+    border-top: 1px solid;
+    border-left: 1px solid;
+    border-right: 3px solid;
+    border-bottom: 3px solid;
+}
+
+.results .test-show table * {
+    font-size: .93em;
+    text-align: left;
+    width: auto;
+    /*height: 90%;*/
+}
+
+.results .test-show .student-list {
+    /*border: 2px solid red;*/
+    overflow: auto;
+    padding: auto;
+    margin: 0;
+    height: 120%;
+}
+
+.results .test-show .student-list ol li {
+    text-align: left;
+}
+</style>
+<div class="results row">
+    <div class="col-12 row">
+        <h2 class="col-12" style="text-align: center;">Mes tests</h2>
+        <div class="tests-list col-3">
+            <ul>
+                <% @results.each do |tst| %>
+                <li>
+                    <%= tst.title %>
+                </li>
                 <% end %>
-            </li>
-            <% end %><br>
-        </ul>
-        <% n += 1 %>
+            </ul>
+        </div>
+        <% @results.each do |tst| %>
+        <% 
+            n = 1 
+            totalPoints = 0
+            tst.questions.each do |question|
+            totalPoints += question.points 
+            end
+        %>
+        <div class=" collapse test-show col-9">
+            <table class="table">
+                <thead class="table-light">
+                    <tr>
+                        <th colspan="3">Titre</th>
+                        <th colspan="3">Crée par</th>
+                        <th colspan="3">Le</th>
+                        <th colspan="3">Niveau</th>
+                        <th colspan="3">Points obtenus</th>
+                        <th colspan="3">Les victimes</th>
+                        <th colspan="3">Les elites</th>
+                    </tr>
+                </thead>
+                <tbody class="table-info">
+                    <tr>
+                        <td colspan="3">
+                            <%= tst.title %>
+                        </td>
+                        <td colspan="3">
+                            <%= tst.teacher.first_name %>
+                            <%= tst.teacher.last_name %>
+                        </td>
+                        <td colspan="3">
+                            <%= Time.at(tst.created_at.to_datetime.to_i) %>
+                        </td>
+                        <td colspan="3">
+                            <%= tst.level.title %>
+                        </td>
+                        <td colspan="3">
+                            <%= "#{tst.score}/#{totalPoints}" %>
+                        </td>
+                        <td colspan="3">
+                            <%= tst.students.length %>
+                        </td>
+                        <td colspan="1">
+                            <ol class="student-list">
+                                <% tst.students.each do |student| %>
+                                <li>
+                                    <%= User.find_by(email: student.email).username %>
+                                </li>
+                                <% end %>
+                            </ol>
+                        </td>
+                    </tr>
+                </tbody>
+                <tfoot class="table">
+                </tfoot>
+            </table>
+        </div>
         <% end %>
-    </ul>
-    <center>
-        Ton score :
-        <%= tst.score %>/<%= totalPoints %>
-    </center>
-    <% end %>
-    <h1 id="stats" class="stats">Stats</h1>
-    <% bar_chart @results.top(:score, 10) %>
-    <%= test_by_score %>
+    </div>
+    <div class="chart col-12">
+        <h2 id="stats" style="text-align: center;">Mes stats</h2>
+        <div class="stats">
+            <% bar_chart @results.top(:score, 10) %>
+            <%= test_by_score %>
+        </div>
+    </div>
+    <!-- <div class="left col-2">
+        <div class="logo">
+            </div>
+            <div class="links">
+            </div>
+    </div> -->
 </div>
+<script type="text/javascript">
+jQuery(document).ready(function($) {
+    $.each($(`.tests-list li`), function(index, val) {
+        let b = $(`.tests-list li`).eq(index);
+        // let b = $(`button.dropdown-toggle`);
+        b.click(function(event) {
+            $(`.test-show`).hide();
+            $(`.test-show`).eq(index).toggle(`slow`);
+        });
+    });
+});
+</script>
