--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,4 @@
-<div id="student_form" class="<%= action_name %>_student col-md-6 col-sm-6">
+<div id="student_form" class="<%= action_name %>_student <% if action_name == 'new' %>col-md-6 col-sm-6 <% end %>">
     <% if action_name == "new" %>
     <div class="link_to_new_student btn btn-light">
         <h3>S'inscrire en tant que nouvel élève</h3>
@@ -88,7 +88,13 @@
         </div><br>
         <% if action_name == 'edit' %>
         <div>
-            <%= image_tag (current_user.avatar.attached? ? current_user.avatar : 'profile-2398782_960_720.png'), width: '100px', height: '100px' %>
+            <%= 
+                if current_user.avatar.attached?
+                    image_tag(current_user.avatar, :size => 100)
+                else
+                    image_tag('profile-2398782_960_720.png', :size => 100)
+                end
+            %>
         </div>
         <div>
             <h3>Changer la photo de profil</h3>
